--- a/res/layout/scan.xml
+++ b/res/layout/scan.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView
-    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+<TextView style="@android:style/TextAppearance.Large"
+    android:layout_centerInParent="true"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Hello World, ScanActivity"
-    />
-</LinearLayout>
+    android:text="((( Analyze Tag )))"/>
+<TextView
+    android:layout_centerHorizontal="true"
+    android:layout_alignParentBottom="true"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="SCAN TAG NOW"/>
+</RelativeLayout>
 
