--- a/res/layout/overview.xml
+++ b/res/layout/overview.xml
@@ -7,4 +7,9 @@
         android:layout_alignParentTop="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <TextView android:id="@+id/static_lock_message"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/uid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </RelativeLayout>
