--- a/res/layout/overview.xml
+++ b/res/layout/overview.xml
@@ -12,4 +12,9 @@
         android:layout_below="@id/uid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <TextView android:id="@+id/cc_message"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/static_lock_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </RelativeLayout>
