--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,10 +1,9 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:fillViewport="true" android:layout_height="match_parent" android:layout_width="match_parent">
     <LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical">
         <TextView android:id="@+id/intro_text" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="wrap_content" android:padding="20dp" android:text="The beta Dangerous NFC app will protect your xNT tag from accidental or malicious attack by doing two things:\n\n1. Set lock bytes in memory page 02 to 0F 00 and bytes in page E2 to 00 00 7F. This protects the one-time-programmable bytes in page 03 and freezes the lock byte configuration, ensuring your xNT cannot be forever locked as read-only.\n\n2. Set a 32 bit password of your choosing and update AUTH0 in page E3 to ensure the configuration bytes in pages E3 and E4 are protected from write access by a password. DO NOT FORGET YOUR PASSWORD!\n\nWe are not yet offering full tag password protection. Support is, however, planned."></TextView>
-        <RelativeLayout android:gravity="bottom" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="fill_parent" android:orientation="vertical" android:paddingTop="40dp">
+        <LinearLayout android:gravity="center" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical">
             <Button android:id="@+id/select_password" android:layout_centerHorizontal="true" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Select Password" android:onClick="requestPassword"></Button>
-            <TextView android:id="@+id/chosen_password" android:layout_below="@id/select_password" android:layout_centerHorizontal="true" android:layout_height="wrap_content" android:layout_marginBottom="40dp" android:layout_width="wrap_content" android:text="" android:typeface="monospace" android:visibility="visible" style="@android:style/TextAppearance.Large"></TextView>
-            <TextView android:id="@+id/scan_tag_now" android:layout_below="@id/chosen_password" android:layout_centerHorizontal="true" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="SCAN TAG NOW" android:visibility="invisible"></TextView>
-        </RelativeLayout>
+            <TextView android:id="@+id/scan_tag_now" android:layout_centerHorizontal="true" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingTop="40dp" android:paddingBottom="60dp" android:text="PASSWORD SET\nSCAN TAG NOW" android:visibility="invisible"></TextView>
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
