Use 'textVisiblePassword' for password input type

--- a/res/layout/password.xml
+++ b/res/layout/password.xml
@@ -7,6 +7,6 @@
         android:layout_alignParentTop="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textNoSuggestions"
+        android:inputType="textNoSuggestions|textVisiblePassword"
         android:ems="4"/>
 </RelativeLayout>
